syntax = "proto3";

package service;
option go_package = "github.com/carthooks/extension/service";

message GetResourcesResponse {
}

